fix: overflow scope

--- a/src/ui/MessagesView/MessagesView.scss
+++ b/src/ui/MessagesView/MessagesView.scss
@@ -107,10 +107,3 @@
     }
   }
 }
-
-.json-view {
-  position: 'absolute';
-  width: '100%';
-  height: '100%';
-  overflow: 'auto';
-}
